# employee-management-system

./: README.md
backend/: .gitignore  ADD_TEST_USERS.md  Cargo.toml  JWT_TEST_GUIDE.md  generate_test_users.py  insert_test_users.sql
backend/migrations/: 20260101000000_initial_schema.sql  20260101000001_add_jwt_tokens.sql  20260622000002_create_leave_requests.sql  20260622000003_align_leave_requests_with_employees.sql  20260622000004_fix_employees_updated_at_trigger.sql  20260622000005_allow_withdrawn_leave_status.sql
backend/src/: main.rs
backend/src/config/: settings.rs
backend/src/db/: database.rs
backend/src/handlers/: auth_handlers.rs  employee_handlers.rs  leave_handlers.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/models/: auth.rs  employee.rs  leave.rs  mod.rs
backend/src/routes/: auth.rs  employee.rs  leave.rs  mod.rs
backend/src/utils/: jwt.rs  password.rs
frontend/: .env.example  FRONTEND_JWT_INTEGRATION.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/app/components/: AppAlert.vue  AppButton.vue  AppHeader.vue  AppInput.vue  AppSpinner.vue
frontend/app/composables/: useApi.ts  useAuthGuard.ts  useAuthToken.ts
frontend/app/pages/: add-employee.vue  admin.vue  employee.vue  employees.vue  index.vue  login.vue
frontend/app/pages/admin/: leave-approval.vue  leaves.vue
frontend/app/pages/edit-employee/: [id].vue
frontend/app/pages/employees/: [id].vue
frontend/app/pages/leave/: apply.vue  my-leaves.vue
frontend/assets/styles/: main.css
