[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
actix-files = "0.6"
dotenvy = "0.15"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

env_logger = "0.11"
log = "0.4"

actix-multipart = "0.7"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
mime_guess = "2"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "chrono"
] }

# JWT authentication
jsonwebtoken = "9"

# Password hashing
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
password-hash = "0.5"

# Time utilities for JWT expiry
chrono = { version = "0.4", features = ["serde"] }